// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`direct custom blockId 1`] = `
<iframe
  className="direct"
  src="/direct.html?blockId=R-I-267060-3"
/>
`;

exports[`direct custom blockId and cls 1`] = `
<iframe
  className="direct my-super-direct"
  src="/direct.html?blockId=R-I-104220-41"
/>
`;

exports[`direct custom cls 1`] = `
<iframe
  className="direct my-super-direct"
  src="/direct.html?blockId=D-I-104220-4"
/>
`;

exports[`direct default 1`] = `
<iframe
  className="direct"
  src="/direct.html?blockId=D-I-104220-4"
/>
`;
